--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
   "scripts": {
     "start": "ts-node src/check-idl.ts",
     "build": "tsc",
+    "build:action": "ncc build src/action.ts -o dist/action",
     "check": "ts-node src/check-idl.ts"
   },
-  "keywords": ["solana", "idl", "monitor", "helius"],
+  "keywords": [
+    "solana",
+    "idl",
+    "monitor",
+    "helius"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@solana/web3.js": "^1.87.6",
-    "axios": "^1.6.2",
+    "@solana/web3.js": "^1.98.4",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
     "@types/node": "^20.10.0",
+    "@vercel/ncc": "^0.38.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
