--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
 
 inputs:
   rpc-url:
-    description: "Solana RPC endpoint URL. Pass as a secret (${{ secrets.RPC_URL }}) since it may contain an API key."
+    description: "Solana RPC endpoint URL. Pass as a secret since it may contain an API key."
     required: true
   program-id:
     description: "The on-chain program address to monitor"
